--- a/src/KarveLocale/Properties/Resources.resx
+++ b/src/KarveLocale/Properties/Resources.resx
@@ -3103,4 +3103,22 @@
   <data name="lvehicles" xml:space="preserve">
     <value>Vehiculos</value>
   </data>
+  <data name="lbooking" xml:space="preserve">
+    <value>Reserva</value>
+  </data>
+  <data name="ldepositnotes" xml:space="preserve">
+    <value>Observaciones Fianza</value>
+  </data>
+  <data name="ldeposit" xml:space="preserve">
+    <value>Fianza</value>
+  </data>
+  <data name="lsaveclients" xml:space="preserve">
+    <value>Guardar Datos en Clientes</value>
+  </data>
+  <data name="ldeparturehour" xml:space="preserve">
+    <value>Ora de salida</value>
+  </data>
+  <data name="lcreditcardholder" xml:space="preserve">
+    <value>Titular</value>
+  </data>
 </root>
