- Fix of the data layer booking. - Fix Code generator - Extending of KarveNavigator - Changed values - Changed Booking control view.

--- a/src/KarveLocale/Properties/Resources.es-ES.resx
+++ b/src/KarveLocale/Properties/Resources.es-ES.resx
@@ -2706,4 +2706,7 @@
   <data name="lshow" xml:space="preserve">
     <value>Muestra</value>
   </data>
+  <data name="lrowsperpage" xml:space="preserve">
+    <value>Rigas per pagina</value>
+  </data>
 </root>
