--- a/src/KarveLocale/Properties/Resources.resx
+++ b/src/KarveLocale/Properties/Resources.resx
@@ -3139,4 +3139,7 @@
   <data name="lshow" xml:space="preserve">
     <value>Muestra</value>
   </data>
+  <data name="lrowsperpage" xml:space="preserve">
+    <value>Rigas per pagina</value>
+  </data>
 </root>
