- Added extension for validating data annotations. - Modified the headered grid controls. - Modified controls for skipping the tab stop. - Modified  KarveRoutingBaseViewModel for allowing CanExecuteCommand. In this way when the UI validations fails it will not execute. - Added a validation chain inside the booking data saver. Chain of responsability design pattern. - Added the KarveBusinessServices Project for the business layer. - Added several validation rules: a concept shall be not null, a date shall be correct, a group shall be not null. Other fields shall be not null. - Added static class DateUtils for ULTIMODI - Added BookingUnitToIndexConverter for the booking unit.

--- a/src/KarveLocale/Properties/Resources.de-DE.resx
+++ b/src/KarveLocale/Properties/Resources.de-DE.resx
@@ -2933,4 +2933,10 @@
   <data name="lid" xml:space="preserve">
     <value>Id</value>
   </data>
+  <data name="lmonth" xml:space="preserve">
+    <value>Monate</value>
+  </data>
+  <data name="lfortnight" xml:space="preserve">
+    <value>Zwei Wochen</value>
+  </data>
 </root>
